test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-create-policy-invalid/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: indigiored
