test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-create-policy-invalid/01-create.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create
spec:
  timeouts: {}
  try:
  - apply:
      file: ns.yaml
  - apply:
      check:
        (error != null): true
      file: policy.yaml
