test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-create-policy-invalid/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-nosync-create-policy-invalid
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy.yaml
